--- a/Xcode/Libraries/README
+++ b/Xcode/Libraries/README
@@ -1,20 +1,25 @@
 Static Libraries:
-jpeg-6b
-libogg-1.1.2
-libpng-1.5.1
+jpeg-9c
+libogg-1.3.3
+libpng-1.5.30
 libvorbis-1.1.1
-libtheora-1.0alpha5
-zlib-1.2.3
+libtheora-1.1.1
+zlib-1.2.11
 ffmpeg-r8448
 
 Directions:
 1. Decompress all of those in the Libraries directory.
-2a. Get ffmpeg via
-svn co -r 8448 svn://svn.mplayerhq.hu/ffmpeg/trunk/ ffmpeg
-2b. Run guard-ffmpeg.sh
-2c. Copy ffmpeg-config.h to ffmpeg/config.h
-2d. Run version.sh in ffmpeg
-2e. Patch ffmpeg with
-http://stepmania.sourceforge.net/ffmpeg-r8448-avi.patch
+2. Run "./configure && make .version" from the ffmpeg directory
 3. Open Libraries.xcode and build target all.
 4. Copy the static libraries to stepmania/PBProject/Libraries
+5. Copy ./libpng-1.5.30/scripts/pnglibconf.h.prebuilt to libpng-1.5.30/pnglibconf.h
+
+Source files:
+http://ftp.oregonstate.edu/.1/xiph/releases/theora/libtheora-1.1.1.tar.bz2
+https://www.ijg.org/files/jpegsrc.v9c.tar.gz
+http://downloads.xiph.org/releases/theora/libtheora-1.1.1.tar.bz2
+https://zlib.net/zlib-1.2.11.tar.gz
+https://ftp.osuosl.org/pub/libpng/src/libpng15/libpng-1.5.30.tar.gz
+http://downloads.xiph.org/releases/ogg/libogg-1.3.3.tar.gz
+http://downloads.xiph.org/releases/vorbis/libvorbis-1.3.6.tar.gz
+https://ffmpeg.org/releases/ffmpeg-4.1.tar.bz2
